adicionando uma legenda ao final do texto em html dia 4

--- a/fundamentos/secao-02-introdução-a-html-e-css/dia-04-html-e-css-estruturas-da-pagina/index.html
+++ b/fundamentos/secao-02-introdução-a-html-e-css/dia-04-html-e-css-estruturas-da-pagina/index.html
@@ -22,5 +22,6 @@
    <p id="Joicy">Joicy é uma mulher de coração generoso, conhecida por sua empatia e compaixão. Seu nome reflete sua natureza amigável, e ela é a pessoa em quem todos confiam para ouvir e oferecer apoio nos momentos difíceis. Ela possui a habilidade única de criar laços profundos com as pessoas, tornando-se uma amiga leal e confidente.</p>
    <p id="Carolzita">Carolzita é a alma da festa em qualquer reunião. Sua personalidade alegre e extrovertida ilumina o ambiente e cativa a todos com sua energia contagiante. Ela é uma contadora de histórias talentosa, sempre pronta para compartilhar suas experiências e fazer todos darem boas risadas.</p>
    <p>Essas quatro personalidades únicas formam um grupo de amigos extraordinário, cada um contribuindo com suas características distintas para criar um círculo social diversificado e cheio de histórias cativantes. Juntos, eles exploram o mundo, enfrentam desafios e celebram a vida, criando memórias que perduram ao longo do tempo e fortalecem os laços que os unem.</p>
+   <h6>texto retirado do ChatGPT</h6>
 </body>
 </html>
