troca do plano de fundo e gif

--- a/fundamentos/secao-02-introdução-a-html-e-css/dia-04-html-e-css-estruturas-da-pagina/index.html
+++ b/fundamentos/secao-02-introdução-a-html-e-css/dia-04-html-e-css-estruturas-da-pagina/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício</title>
 </head>
-<body background="4adf23833c1804e6b85c06557c74aefd.jpg">
+<body background="pastel.jpeg" width="">
     
     <h1>Lista de quem fiz amizade aqui na trybe</h1>
     <p>Todos eles se encontram <a href="https://www.betrybe.com/" target="_blank">aqui!</a></p>
@@ -15,8 +15,8 @@
         <li><a href="#Joicy">Joicy</a></li>
         <li><a href="#Carolzita">Carolzita</a></li>
     </ul>
-    <h2>Nois zoa, rir, brinca, agente faz piadinha etc, mas só Deus sabe como ta a mente do palhaço!</h2>
-   <img src="https://i.pinimg.com/564x/2b/cc/a7/2bcca79d94c1d27b6d715b52c06be725.jpg" width="600px"> 
+    <h2>Nunca um, sem o outro!</h2>
+   <img src="https://media.tenor.com/j4NpascrPagAAAAd/kindred-fortnite-dance.gif" width="1323px"> 
    <p id="Enza">Enza é uma jovem de espírito livre que vive sua vida com uma paixão avassaladora pela natureza. Ela é uma verdadeira entusiasta ao ar livre, sempre pronta para uma nova aventura, seja escalando montanhas, explorando florestas profundas ou acampando sob as estrelas. Seu sorriso cativante e sua disposição para enfrentar desafios inspiram todos ao seu redor a abraçarem a vida com entusiasmo.</p>
    <p id="Vitor">Vitor, por outro lado, é um homem de grande determinação e confiança. Sua presença imponente e sua mente afiada o tornam um líder natural em qualquer situação. Ele é alguém que não recua diante de obstáculos e sempre busca superar desafios, seja em sua carreira ou nas atividades do dia a dia.</p>
    <p id="Joicy">Joicy é uma mulher de coração generoso, conhecida por sua empatia e compaixão. Seu nome reflete sua natureza amigável, e ela é a pessoa em quem todos confiam para ouvir e oferecer apoio nos momentos difíceis. Ela possui a habilidade única de criar laços profundos com as pessoas, tornando-se uma amiga leal e confidente.</p>
