--- a/fundamentos/secao-02-introdução-a-html-e-css/index.html
+++ b/fundamentos/secao-02-introdução-a-html-e-css/index.html
@@ -7,6 +7,7 @@
 
     h1 {
         color: orange;
+        font-size: 65px;
     }
     
     .list-style {
@@ -17,6 +18,7 @@
         background-color: pink;
     }
     
+
     </style>
   </head>
   <body>
