--- a/fundamentos/secao-05-html-e-css-forms-flexbox-e-responsivo/dia-23-css-flexbox-parte-1/align-content.html
+++ b/fundamentos/secao-05-html-e-css-forms-flexbox-e-responsivo/dia-23-css-flexbox-parte-1/align-content.html
@@ -22,7 +22,7 @@
         display: flex;
         flex-wrap: wrap;
         height: 600px;
-        align-content: ;
+        align-content: center; 
       }
     </style>
 
